# gridcalc

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  example.json  gridcalc.toml.example  pycalc.toml.example  pyproject.toml
docs/: security-plan.md
pycalc/: __main__.py  config.py  engine.py  sandbox.py  tui.py
src/gridcalc/: __init__.py  config.py  engine.py  sandbox.py  tui.py
tests/: test_config.py  test_engine.py  test_libs.py  test_sandbox.py  test_tui.py
